all spacings corrected (cards and presentation)

--- a/front-end/assets/styles/style.css
+++ b/front-end/assets/styles/style.css
@@ -473,8 +473,8 @@ header {
 @media (min-width: 1024px) {
     .cards__item {
         display: inline-block;
-        max-width: calc(25% - 1rem);
-        margin: 0.5rem;
+        max-width: calc(25% - 1.5rem);
+        margin: 1rem;
     }
     .cards__item:first-child {
         margin-left: 0;
@@ -613,7 +613,7 @@ header {
 @media (min-width: 1200px) {
     .market {
         width: 50%;
-        padding: 0 1rem;
+        margin-left: 1rem;
     }
 }
 .table {
@@ -668,6 +668,7 @@ header {
 @media (min-width: 1200px) {
     .visitstore {
         width: 50%;
+        margin-right: 1rem;
     }
 }
 
